# auto_workflow_demo

./: .dockerignore  .gitattributes  .gitignore  .gitleaksignore  README.md
AI_Agent/: CLAUDE.md  Dockerfile  pyproject.toml
AI_Agent/app/: config.py  container.py  dependencies.py  main.py
AI_Agent/config/: .env.example
AI_Agent/docs/: SPLIT.md
AI_Agent/plans/: PLAN_11_HACKATHON_SUBMISSION.md  PLAN_12_skill_bootstrap.md
AI_Agent/scripts/: entrypoint.sh  modal_app.py  modal_validate_bge_gemma.py  run_llama_server.sh
AI_Agent/tests/: test_container.py  test_domain_classifier.py  test_http.py  test_llamacpp_gemma.py  test_policy_seeds.py  test_skill_bootstrap.py
API_Server/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
API_Server/agents/: DEVELOPER.md  ORCHESTRATOR.md  REFACTOR.md  REPORTER.md  TESTER.md  TEST_WRITER.md
API_Server/app/: config.py  container.py  dependencies.py  errors.py  main.py  scheduler.py
API_Server/plans/: LOCAL_TESTING_AI_COMPOSER.md  PLAN_01_AUTH_AND_USERS.md  PLAN_02_WORKFLOW_CRUD.md  PLAN_03_EXECUTION_TRIGGER.md  PLAN_04_SCHEDULER_ACTIVATE.md  PLAN_05_WEBHOOK_TRIGGER.md  PLAN_06_AGENT_MANAGEMENT.md  PLAN_07_CREDENTIAL_PIPELINE.md  PLAN_08_AGENT_CREDENTIAL_PAYLOAD.md  PLAN_09_CREDENTIAL_GET_LIST.md
API_Server/scripts/: mint_dev_token.py
API_Server/tests/: conftest.py  test_agent_credential_payload.py  test_agents.py  test_ai_agent_client.py  test_ai_composer.py  test_auth.py  test_credential_execute_validation.py  test_credentials.py  test_dag_validator.py  test_execute_inline.py  test_executions.py  test_google_oauth_client.py  test_node_catalog.py  test_oauth_google_routes.py  test_oauth_state.py  test_scheduler.py  test_skills.py  test_wake_worker.py  test_webhooks.py  test_workflows.py
Database/: .env.example  CLAUDE.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
Database/agents/: DEVELOPER.md  ORCHESTRATOR.md  REFACTOR.md  REPORTER.md  TESTER.md  TEST_WRITER.md
Database/deploy/: README.md  README_oauth.md
Database/migrations/: 20260414_initial_schema.sql  20260416_add_user_auth_fields.sql  20260416_executions_created_at.sql  20260419_credentials_oauth_metadata.sql  20260420_credentials_agents_webhooks.sql  20260427_skill_bootstrap_tables.sql  20260501_node_logs_partitioned.sql  20260515_approval_notifications.sql  20260601_credentials_type_column.sql
Database/plans/: PLAN_00_PACKAGE_REFACTOR.md  PLAN_01_CORE_SCHEMA.md  PLAN_02_CREDENTIALS_AGENTS_POSTGRES_IMPL.md  PLAN_03_NODE_LOG_PARTITIONED.md  PLAN_04_APPROVAL_NOTIFICATION_AUDIT.md  PLAN_05_AGENT_CREDENTIAL_REENCRYPTION.md  PLAN_06_EXECUTION_LIST_SUPPORT.md  PLAN_07_DB_RESILIENCE.md  PLAN_08_AGENT_REPOSITORY.md  PLAN_09_CREDENTIAL_PIPELINE_DB.md  PLAN_10_CREDENTIAL_LIST.md
Database/schemas/: 001_core.sql  002_credentials_agents_webhooks.sql  003_node_logs_partitioned.sql  004_approval_notifications.sql  005_skill_bootstrap.sql
Database/scripts/: migrate.py  roll_partitions.py
Database/tests/: fakes.py  test_agent_reencryption.py  test_agent_repository.py  test_approval_notifications.py  test_credential_bulk_fake.py  test_credential_oauth_fake.py  test_credential_store.py  test_execution_list.py  test_execution_node_logs.py  test_postgres_repositories.py  test_schema_loads.py  test_session_resilience.py  test_skill_repository.py  test_status_transitions.py  test_user_repository.py
Execution_Engine/: CLAUDE.md  Dockerfile  pyproject.toml
Execution_Engine/agents/: DEVELOPER.md  ORCHESTRATOR.md  REFACTOR.md  REPORTER.md  TESTER.md  TEST_WRITER.md
Execution_Engine/config/: celery_config.py
Execution_Engine/plans/: PLAN_01_BASE_NODE_REGISTRY.md  PLAN_02_DAG_EXECUTOR.md  PLAN_03_CELERY_DISPATCHER.md  PLAN_04_AGENT_DAEMON.md  PLAN_05_CONDITION_CODE_NODES.md  PLAN_06_SLACK_DELAY_NODES.md  PLAN_07_EMAIL_NODE.md  PLAN_08_CREDENTIAL_RESOLUTION.md  PLAN_09_DB_QUERY_NODE.md  PLAN_10_AGENT_CREDENTIAL_DECRYPT.md  PLAN_11_SAAS_NODES.md  PLAN_12_FLOW_PRIMITIVES.md  PLAN_13_MESSAGING_LLM.md  PLAN_14_SAAS_EXPAND.md
Execution_Engine/scripts/: agent_run.py  e2e_gmail_send.py  e2e_smoke.py  e2e_workspace_node.py  (+1 more)
(+235 files in other folders)
