[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-workflow-execution-engine"
version = "0.1.0"
description = "Execution layer for auto_workflow_demo — node plugins, DAG runtime, Celery dispatcher, Agent daemon."
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "httpx>=0.27",
    "celery[redis]>=5.3",
    "websockets>=12.0",
    "RestrictedPython>=7.0",
    "aiosmtplib>=3.0",
    "auto-workflow-database",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "plans*", "agents*", "config*", "scripts*"]
